@@ -1,4 +1,4 @@
-%define glibcrelease 2
+%define glibcrelease 3
 %define auxarches i586 i686 athlon sparcv9 alphaev6
 %define xenarches i686 athlon
 %ifarch %{xenarches}
@@ -1528,6 +1528,12 @@ rm -f *.filelist*
 %endif
 
 %changelog
+* Sun Oct  8 2006 Jakub Jelinek <jakub@redhat.com> 2.5-3
+- bump __GLIBC_MINOR__
+- increase PTHREAD_STACK_MIN on ppc{,64} to 128K to allow
+  64K pagesize kernels (#209877)
+- speed up initgroups on NIS+ (#208203)
+
 * Mon Oct  2 2006 Jakub Jelinek <jakub@redhat.com> 2.5-2
 - fix nscd database growing (#207928)
 - bypass prelinking when LD_DYNAMIC_WEAK=1 is in the environment
