@@ -80,7 +80,7 @@ abday       "<U0A10><U0A24><U0020>";/
             "<U0A2C><U0A41><U0A71><U0A27><U0020>";/
             "<U0A35><U0A40><U0A30><U0020>";/
             "<U0A36><U0A41><U0A71><U0A15><U0A30><U0020>";/
-            "<U0A36><U0A28><U0A40><U0A1A><U0A30><U0020>"
+            "<U0A36><U0A28><U0A3F><U0A71><U0A1A><U0A30><U0020>"
 %
 % Full weekday names (%A)
 day       "<U0A10><U0A24><U0A35><U0A3E><U0A30><U0020>";/
